NTI-10993 - fix button on firefox

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,6 +1,7 @@
 .button {
 	font: normal 600 0.875rem/1rem var(--body-font-family);
 	text-decoration: none;
+	text-align: center;
 	display: inline-block;
 	padding: 0.75rem 1.25rem;
 	cursor: pointer;
